Blackpurl/src/objects/BRP_Dealer_Product_Line__c.object
<CustomObject>
    <fields>
        <fullName>BRP_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BRP Dealer</label>
        <referenceTo>BRP_Dealers__c</referenceTo>
        <relationshipLabel>BRP Dealer Product Lines</relationshipLabel>
        <relationshipName>BRP_Dealer_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Id__c</fullName>
        <label>Party Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BRP Dealer Product Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_Id__c</columns>
        <columns>BRP_Dealer__c</columns>
        <columns>Party_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>BRP Dealer Product Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BRP Dealer Product Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>